JS, DOM manipulation

--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
                 </form>  
                 <ul class="list-group">
                     <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
                 </ul>
             </section>
             <section class="col-lg-9" id="mainColumn">
                 <div class="jumbotron jumbotron-fluid" id="currentWeather">
                     <div class="container">
-                      <h1 class="display-4" id="WhereAndWhen">City Name and Current Date then weather emoji</h1>
-                      <p class="lead">temp, humidity, wind speed, UV index</p>
+                      <h1 class="display-4" id="whereAndWhen">City Name and Current Date then weather emoji</h1>
+                      <p class="lead currentTemp"></p>
+                      <p class="lead currentHumidity"></p>
+                      <p class="lead currentWind"></p>
+                      <p class="lead currentUV"></p>
                     </div>
                 </div>
                 <h2>
@@ -43,40 +42,50 @@
                     <div class="col-sm-2">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Date</h5>
-                                <p class="card-text">weather emoji<br>temp<br>humidity</p>
+                                <h5 class="card-title add1">Date</h5>
+                                <p class="card-text day1emoji">weather emoji</p>
+                                <p class="card-text day1temp">temp</p>
+                                <p class="card-text day1humidity">humidity</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Date</h5>
-                                <p class="card-text">weather emoji<br>temp<br>humidity</p>
+                                <h5 class="card-title add2">Date</h5>
+                                <p class="card-text day2emoji">weather emoji</p>
+                                <p class="card-text day2temp">temp</p>
+                                <p class="card-text day2humidity">humidity</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Date</h5>
-                                <p class="card-text">weather emoji<br>temp<br>humidity</p>
+                                <h5 class="card-title add3">Date</h5>
+                                <p class="card-text day3emoji">weather emoji</p>
+                                <p class="card-text day3temp">temp</p>
+                                <p class="card-text day3humidity">humidity</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Date</h5>
-                                <p class="card-text">weather emoji<br>temp<br>humidity</p>
+                                <h5 class="card-title add4">Date</h5>
+                                <p class="card-text day4emoji">weather emoji</p>
+                                <p class="card-text day4temp">temp</p>
+                                <p class="card-text day4humidity">humidity</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-body">
-                                <h5 class="card-title">Date</h5>
-                                <p class="card-text">weather emoji<br>temp<br>humidity</p>
+                                <h5 class="card-title add5">Date</h5>
+                                <p class="card-text day5emoji">weather emoji</p>
+                                <p class="card-text day5temp">temp</p>
+                                <p class="card-text day5humidity">humidity</p>
                             </div>
                         </div>
                     </div>
