--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="citySearch">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchBtn">Search</button>
                 </form>  
-                <ul class="list-group">
-                    <li class="list-group-item">Cras justo odio</li>
+                <ul class="list-group" id="appendMe">
+                    
                 </ul>
             </section>
             <section class="col-lg-9" id="mainColumn">
